--- a/simpleform.html
+++ b/simpleform.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../Learn-HTML/style.css"  type="text/css" rel="stylesheet"hh>
+    <link href="../Learn-HTML/style.css"  type="text/css" rel="stylesheet">
     <title>form simple</title>
 </head>
 <body class="container">
