--- a/table2.html
+++ b/table2.html
@@ -9,7 +9,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./table2.css" type="text/css" />
+    <link rel="stylesheet" href="./css/table2.css" type="text/css" />
 
     <title>Thời khóa biểu</title>
   </head>
